starlark-rust/starlark_syntax/src/syntax/grammar_tests/ellipsis.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
x = ...

Error:
error: `...` is not allowed in this dialect
 --> ellipsis:1:5
  |
1 | x = ...
  |     ^^^
  |
